[BUGFIX] data tool - align dock top with layers dock top
Fixed #918

--- a/lizmap/www/css/map.css
+++ b/lizmap/www/css/map.css
@@ -603,6 +603,9 @@ SubDock
   font-weight:bold;
   color:grey;
 }
+#bottom-dock.fullsize #attributeLayers-tabs > li > a {
+  margin-top:10px;
+}
 #attributeLayers-tabs > li.active > a, #attributeLayers-tabs > li > a:hover {
   border:none;
   background:none;
@@ -613,6 +616,9 @@ SubDock
 
 #attributeLayers .tab-content .attribute-content {
   top:50px;
+}
+#bottom-dock.fullsize #attributeLayers .tab-content .attribute-content {
+  top:60px;
 }
 #attributeLayers .tab-content .attribute-content .dataTables_wrapper .dataTables_info {
   padding-right:5px;
